@@ -15,6 +15,14 @@ RELEASE 0.XX - XXX
   - Fix the --keep-going flag so it builds all possible targets even when
     a later top-level target depends on a child that failed its build.
 
+  From Steven Knight:
+
+  - Support the ability to subclass the new-style "str" class as input
+    to Builders.
+
+  - Improve the performance of our type-checking by using isinstance()
+    with new-style classes.
+
   From Rob Managan:
 
   - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).
